# CIS-25

./: README.md  cis25Fall20231003.cpp  cppCodingConventionStyle20230912.cpp  syllabus.html
VSCode/final/: cis25Fall2023FinalFractionSeanTalleySetup.cpp  cis25Fall2023FinalFractionSeanTalleySetup.h  cis25Fall2023FinalFractionUtilitySeanTalleySetup.cpp  cis25Fall2023FinalFractionUtilitySeanTalleySetup.h  cis25Fall2023FinalSeanTalleySetup.cpp  cis25Fall2023FinalUtilitySeanTalleySetup.cpp  cis25Fall2023FinalUtilitySeanTalleySetup.h
VSCode/final_unedited/: cis25Fall2023FinalFirstLastSetup.cpp  cis25Fall2023FinalFractionUtilityYourNameSetup.cpp  cis25Fall2023FinalFractionUtilityYourNameSetup.h  cis25Fall2023FinalFractionYourNameSetup.cpp  cis25Fall2023FinalFractionYourNameSetup.h  cis25Fall2023FinalUtilityYourNameSetup.cpp  cis25Fall2023FinalUtilityYourNameSetup.h
VSCode/fraction playground/: cis25Fall2023SeanTalleyDriverHw4.cpp  cis25Fraction1205.cpp  cis25Fraction1205.h  fractionSeanT.cpp  fractionSeanT.h  fractionUtilitySeanT.cpp  fractionUtilitySeanT.h  hw4UtilitySeanT.cpp
VSCode/hw2/: cis25Fall2023SeanTalleyHw2.cpp
VSCode/hw3/: cis25Fall2023SeanTalleyDriverUtility.cpp  cis25Fall2023SeanTalleyDriverUtility.h  cis25Fall2023SeanTalleyFraction.cpp  cis25Fall2023SeanTalleyFraction.h  cis25Fall2023SeanTalleyHw3  cis25Fall2023SeanTalleyHw3.cpp  cis25Fall2023SeanTalleyHwDriver.cpp  hw3.cpp
VSCode/hw4 resubmission/: cis25Fall2023SeanTalleyDriverHw4.cpp  cis25Fraction1205.h  (+6 more)
VisualStudio/HW1/HW1/: CMakeLists.txt  cis25Fall2023SeanTalleyHw1.cpp  cis25Fall2023SeanTalleyHw1.h
(+76 files in other folders)
