# CMakeList.txt : CMake project for HW1, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (HW1 "cis25Fall2023SeanTalleyHw1.cpp" "cis25Fall2023SeanTalleyHw1.h")

# TODO: Add tests and install targets if needed.
